Set up css file structure and style webview header

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,1 +1,13 @@
-@import 'modules/_body';
+@import 'base/_variables';
+@import 'base/_global';
+@import 'base/_mixins';
+@import 'base/_typo';
+@import 'base/_animation';
+@import 'base/_utilities';
+
+@import 'layout/_grid';
+@import 'layout/_wrapper';
+
+@import 'modules/_btn';
+@import 'modules/_navigation';
+@import 'modules/_site-header';
