--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -1,5 +1,5 @@
 .site-header {
-    & .container {
+    &__content {
         display: flex;
         justify-content: space-between;
         align-items: center;
