--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,3 +1,6 @@
+/* 3rd party packages */
+@import "slick-carousel/slick/slick.css";
+
 @import 'base/_variables';
 @import 'base/_global';
 @import 'base/_mixins';
