Marked up and styled basic part of myself section

--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -14,6 +14,7 @@
 @import 'modules/_navigation';
 @import 'modules/_site-header';
 @import 'modules/_hero';
+@import 'modules/_section';
 
 
 @import 'base/_utilities';
