--- a/app/assets/styles/modules/_hero.css
+++ b/app/assets/styles/modules/_hero.css
@@ -13,7 +13,7 @@
         left: 0;
         right: 0;
         bottom: 0;
-        background: linear-gradient(to right, rgba(80, 0, 187, 0.85) 0%, rgba(118, 48, 255, 0.88) 100%)
+        background: linear-gradient(to top, rgba(125, 53, 214, 0.90) 0%, rgba(70, 23, 171, 0.90) 100%)
     }
 
     &__heading {
@@ -33,14 +33,18 @@
 
         &--concept {
             margin-top: 20px;
+            font-size: 28pt;
+            letter-spacing: 5pt;
+            font-weight: 600;
         }
 
         &--keywords {
             margin-top: 20px;
             font-size: 16px;
             letter-spacing: 1.4px;
-            font-weight: 500;
+            font-weight: 400;
         }
+
     }
 
     &-slider {
