--- a/app/assets/styles/modules/_section.css
+++ b/app/assets/styles/modules/_section.css
@@ -2,12 +2,56 @@
     padding-top: 80px;
     padding-bottom: 80px;
 
-    &__header {
-        padding: 0 32px;
+    &__container { /* contain A-level */
+        border: 1px solid #999999;
+        max-width: 1024px;
+        margin: 0 auto;
+        @mixin atMedium {
+            padding-right: 200px;
+        }
     }
 
-    &__side {
+    /************** Each Block *************/
+
+    &__header {  /* wrapper A-level */
+        padding: 0 32px;
+        max-width: 500px;
+        border: 1px solid blue;
+    }
+
+    &__side {   /* wrapper A-level */
         padding: 0 0 0 32px;
+        border: 1px solid orange;
+        /* width: 50vw; */
+        &-container {
+            margin-top: 24px;
+            /* display: flex; */
+            & > img {
+                width: 100%;
+                height: 300px;
+                object-fit: cover;
+            }
+            & > .img1 {
+                margin-bottom: 20px;
+            }
+            @mixin atMedium {
+            & > .img1 {
+                margin-right: 3%;
+                margin-bottom: 0;
+            }
+                & > img {
+                    width: 45%;
+                }
+            }
+        }
+
+
+    }
+
+    &__cta {   /* wrapper A-level */
+        padding: 0 32px;
+        border: 1px solid red;
+
     }
 
     &__eyebrow {
@@ -30,9 +74,5 @@
         line-height: 1.8;
         letter-spacing: .5px; 
         color: #303030;
-    }
-
-    &__inner-container {
-        margin-top: 24px;
     }
 }
