--- a/app/assets/styles/base/_animation.css
+++ b/app/assets/styles/base/_animation.css
@@ -11,4 +11,36 @@
 	}
 } */
 
+@keyframes fadeInThenMoveRight {
+	0% {
+		opacity: 0;
+		transform: translateX(0);
+	}
 
+	50% {
+		opacity: 1;
+		transform: translateX(0);
+	}
+
+	100% {
+		opacity: 1;
+		transform: translateX(30px);
+	}
+}
+
+@keyframes fadeInThenMoveLeft {
+	0% {
+		opacity: 0;
+		transform: translateX(0);
+	}
+
+	50% {
+		opacity: 1;
+		transform: translateX(0);
+	}
+
+	100% {
+		opacity: 1;
+		transform: translateX(-30px);
+	}	
+}
