Set up basic markup and styling for footer

--- a/app/assets/styles/base/_typo.css
+++ b/app/assets/styles/base/_typo.css
@@ -1,5 +1,13 @@
+/* Google font 'Lato' weight
+
+    light   300
+    regular 400
+    bold    700
+    black   900
+
+*/
+
 h1 {
     font-size: 54px;
-    font-weight: 500;
-
+    font-weight: 700;
 }
