--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -13,10 +13,12 @@
 @import 'modules/_btn';
 @import 'modules/_navigation';
 @import 'modules/_site-header';
+@import 'modules/_site-footer';
 @import 'modules/_hero';
 @import 'modules/_section';
 @import 'modules/_illust';
 @import 'modules/_card';
+@import 'modules/_site-map';
 
 
 @import 'base/_utilities';
