--- a/app/assets/styles/modules/_hero.css
+++ b/app/assets/styles/modules/_hero.css
@@ -1,7 +1,7 @@
 .hero {
     position: relative;
     color: #fff;
-    text-align: center;
+    /* text-align: center; */
     height: 646px;
     overflow: hidden;
 
@@ -13,21 +13,24 @@
         left: 0;
         right: 0;
         bottom: 0;
-        background: linear-gradient(to top, rgba(125, 53, 214, 0.90) 0%, rgba(70, 23, 171, 0.90) 100%)
+        /* background: linear-gradient(to top, rgba(125, 53, 214, 0.90) 0%, rgba(70, 23, 171, 0.90) 100%) */
+        background: linear-gradient(to right, rgba(20, 0, 218, 0.83) 0%, rgba(116, 20, 204, 0.79) 100%);
+        background: -webkit-linear-gradient(to right, rgba(20, 0, 218, 0.83) 0%, rgba(116, 20, 204, 0.79) 100%);
+
     }
 
     &__heading {
             position: absolute;
             z-index: 1;
             width: 100%;
-            margin-top: 200px;
+            margin-top: 150px;
 
         &--intro {
             font-size: 16px;
             font-weight: 300;
             letter-spacing: 1.8px;
             width: 240px;
-            margin: 0 auto;
+            /* margin: 0 auto; */
             line-height: 1.6;
         }
 
@@ -35,7 +38,12 @@
             margin-top: 20px;
             font-size: 28pt;
             letter-spacing: 5pt;
-            font-weight: 600;
+            font-weight: 700;
+
+            @mixin atSmall {
+                font-size: 65px;
+                letter-spacing: 6px;
+            }
         }
 
         &--keywords {
