--- a/app/assets/styles/modules/_hero.css
+++ b/app/assets/styles/modules/_hero.css
@@ -9,7 +9,18 @@
         height: 446px;
     }
 
+    .page-work1 & {
+        background-image: url('../../assets/images/work_hero_01_mine.jpg');
+        background-size: cover;
+        -webkit-background-size: cover;
+        background-repeat: no-repeat;
+        background-position: 50% 50%;
 
+        @mixin atMedium {
+            background-attachment: fixed;
+            -webkit-background-attachment: fixed;
+        }
+    }
 
     &::after {
         content: '';
@@ -27,13 +38,17 @@
             background: linear-gradient(to bottom, rgba(#4826B9, 1) 0%, rgba(#B92F8B, 1) 100%);
             background: -webkit-linear-gradient(to bottom, rgba(#4826B9, 1) 0%, rgba(#B92F8B, 1) 100%);
         }
+
+        .page-work1 & {
+            background: rgba(59, 62, 83, .5);
+        }
     }
 
     &__heading {
             position: absolute;
             z-index: 1;
             width: 100%;
-            margin-top: 100px;
+            margin-top: 200px;
 
             @mixin atLarge {
                 margin-top: 150px;
