--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -4,9 +4,18 @@
     background-color: #fff;
     transition: all .35s ease-out;
 
+    &--no-bg {
+        background-color: transparent;
+    }
+
+    &--standard {
+        position: absolute;
+        z-index: 1;
+    }
+
     &__content {
         display: flex;
-        justify-content: flex-start;
+        justify-content: space-between;
         align-items: center;
         height: 120px; 
 
@@ -17,10 +26,20 @@
 
     &__logo-text {
         font-size: 32px;
-        margin-left: 60px;
-        margin-top: 10px;
-        font-weight: 900;
-        letter-spacing: -1.04px;
+        margin-top: -1px;
+        font-weight: 700;
+        letter-spacing: -.5px;
+        color: #fff;
+
+        &--black {
+            color: #000;
+            font-weight: 900;
+            letter-spacing: -1px;
+        }
+    }
+
+    &__menu-content {
+        position: relative;
     }
 }
 
