--- a/app/assets/styles/base/_typo.css
+++ b/app/assets/styles/base/_typo.css
@@ -11,3 +11,30 @@ h1 {
     font-size: 54px;
     font-weight: 700;
 }
+
+.p--desc {  /* paragraph - description */
+    line-height: 1.8;
+    font-size: 16px;
+    color: #303030;
+    letter-spacing: .3px;
+    font-weight: 400;
+
+    &--small {
+        font-size: 15px; 
+        letter-spacing: .3px;
+        line-height: 1.8;  
+        color: #707070;
+    }
+    
+    &--mb {
+        margin-bottom: 20px;
+    }
+
+    &--mt {
+        margin-top: 30px;
+    }
+
+    @mixin atSmall {
+        font-size: 18px;
+    }
+}
