--- a/app/assets/styles/base/_utilities.css
+++ b/app/assets/styles/base/_utilities.css
@@ -7,3 +7,38 @@
 * {
     /* border: none !important; */
 }
+
+.border {
+    &--light {
+        border: 1px solid #EAEAEA;
+    }
+
+    &--themeCol {
+        border: 1px solid #5938FF;
+    }
+}
+
+.mb-20 {
+    margin-bottom: 20px;
+}
+
+.p-20 {
+    padding: 30px;
+}
+
+
+.mini-box-container {
+    padding-right: 20%;
+
+    @mixin atMedium {
+        padding-right: 20px;
+    }
+}
+
+.bg--light {
+    background-color: #f8f5ff;
+}
+
+.no-mt {
+    margin-top: 0;
+}
