--- a/app/assets/styles/modules/_hero.css
+++ b/app/assets/styles/modules/_hero.css
@@ -9,12 +9,13 @@
         height: 446px;
     }
 
-    .page-work1 & {
+    .page-work--1 & {
         background-image: url('../../assets/images/work_hero_01_mine.jpg');
         background-size: cover;
         -webkit-background-size: cover;
         background-repeat: no-repeat;
         background-position: 50% 50%;
+        height: 560px;
 
         @mixin atMedium {
             background-attachment: fixed;
@@ -39,8 +40,9 @@
             background: -webkit-linear-gradient(to bottom, rgba(#4826B9, 1) 0%, rgba(#B92F8B, 1) 100%);
         }
 
-        .page-work1 & {
-            background: rgba(59, 62, 83, .5);
+        .page-work--1 & {
+            /* background: rgba(59, 62, 83, .5); */
+            background: rgba(39, 40, 42, .3);
         }
     }
 
