Finished subsection 03 of MINE project

--- a/app/assets/styles/base/_typo.css
+++ b/app/assets/styles/base/_typo.css
@@ -30,6 +30,10 @@ h1 {
         margin-bottom: 20px;
     }
 
+    &--mb--small {
+        margin-bottom: 10px;
+    }
+
     &--mt {
         margin-top: 30px;
     }
