--- a/app/assets/styles/page/_project.css
+++ b/app/assets/styles/page/_project.css
@@ -16,7 +16,7 @@
         }
     }
 
-    &__col--flip-order {
+    &__col--flip-child-order {
         display: flex;
         flex-direction: column;
 
@@ -25,6 +25,22 @@
                 order: 2;
             }
             padding-top: 60px;
+        }
+    }
+
+    &__col--flip-order{
+        display: flex;
+        flex-direction: column;
+
+        @mixin atMedium {
+            flex-direction: row;
+        }
+
+        &--first {
+            order: -1;
+            @mixin atMedium {
+                order: 0;
+            }
         }
     }
 
