--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -9,6 +9,8 @@
 
 @import 'layout/_grid';
 @import 'layout/_wrapper';
+@import 'layout/_box';
+
 
 @import 'modules/_btn';
 @import 'modules/_navigation';
@@ -19,6 +21,8 @@
 @import 'modules/_illust';
 @import 'modules/_card';
 @import 'modules/_site-map';
+@import 'modules/_icon';
+
 
 @import 'page/_project';
 
