--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -22,6 +22,7 @@
 @import 'modules/_card';
 @import 'modules/_site-map';
 @import 'modules/_icon';
+@import 'modules/_numberbox';
 
 
 @import 'page/_project';
