--- a/app/assets/styles/page/_project.css
+++ b/app/assets/styles/page/_project.css
@@ -62,7 +62,10 @@
         font-size: 22px;
         font-weight: 400;
         color: #252525;
-        margin-bottom: 62px;
+        margin-bottom: 42px;
+        @mixin atMedium {
+            margin-bottom: 62px;
+        }
 
         &--number {
             display: block;
@@ -75,16 +78,61 @@
                 text-align: center;
             }
         }
-
-        /* &--al {
-            text-align: left;
-        } */
     }
 
-    &__box {
+    &__boxes {
         @mixin atMedium {
             text-align: center;
         }
+    }
+
+    &__box-container  {
+        /* padding-right: 20%; */
+        width: 100%;
+        height: 260px;
+        display: flex;
+        flex-direction: column;
+
+        & > p {
+            flex: 1 1 100%;
+        }
+
+        @mixin atMedium {
+            /* padding-right: 20px; */
+            height: 320px;
+        }
+    }
+
+    &__box-img {
+        margin-top: 30px;
+        /* border: 1px solid red; */
+        height: 350px;
+
+        &--1 {
+            background-image: url('../../assets/images/visual-strategy_01.jpg');
+            background-size: 120% auto;
+            background-position: center center;
+        }
+
+        &--2 {
+            background-image: url('../../assets/images/visual-strategy_02.jpg');
+            background-size: 120% auto;
+            background-position: center center;
+        }
+
+        &--3 {
+            background-image: url('../../assets/images/visual-strategy_03.jpg');
+            background-size: 120% auto;
+            background-position: center center;
+        }
+    }
+
+    &__box-title {
+        padding: 30px 10px 0 10px;
+    }
+
+    &__box-desc {
+        padding: 0 25px;
     }
 
     &__meta dt {
@@ -99,5 +147,9 @@
         margin-top: 8px;
         font-size: 15px;
         color: rgb(150, 150, 150);
+    }
+
+    &__flow-chart {
+        padding: 20px;
     }
 }
