--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -23,6 +23,7 @@
 @import 'modules/_site-map';
 @import 'modules/_icon';
 @import 'modules/_numberbox';
+@import 'modules/_doubleslider';
 
 
 @import 'page/_project';
