--- a/app/assets/styles/modules/_doubleslider.css
+++ b/app/assets/styles/modules/_doubleslider.css
@@ -1,40 +1,53 @@
-
 .slider-image {
-  /* float: left;
-  width: 50%; */
-  @mixin atMedium {
-     float: left;
-    width: 50%;   
-  }
+    /* border: 1px solid orange; */
+    @mixin atMedium {
+        float: left;
+        width: 100%;   
+        transform: translateY(-150px);
+    }
 }
 
 .slider-content {
-  position: relative;
-  /* display: flex; */
-  /* float: left;
-  width: 50%; */
-  background-color: yellow;
-  height: 70%;
-    @mixin atMedium {
-     float: left;
-    width: 50%;   
-  }
+    position: relative;
+    /* background-color: yellow; */
+    height: 60%;
+
+    @mixin atSmall {
+        /* float: left; */
+        /* width: 50%;    */
+    }
 }
 
-div.slick-list {
-    /* padding-top: 50px; */
+.heading__accent {
+    margin-bottom: 10px;
+    color: #8149ff;
 }
 
+.pagingInfo {
+    position: absolute;
+    bottom: -10px;
+    left: -70px;
+    border: 1px solid pink;
+    font-size: 14px;
+    letter-spacing: 2px;
+    color: #AF91FF;
+    transform: translateY(100%);
+    text-align: right;
+    @mixin atSmall {
+        transform: translateY(0);
+        text-align: left;
+        margin-bottom: 20px;
+    }
+}
 
 .item-i {
-  display: inline-block;
-  border: 1px solid red;
-  /* margin: 1px; */
-  background-color: red;
+    display: inline-block;
+    /* border: 1px solid red;
+    background-color: red; */
 }
 
 .img-wrapper {
-    width: 100%;
+    width: 100%;    
     height: auto;
 }
 
@@ -44,43 +57,52 @@ div.slick-list {
 }
 
 .item-c {
-  display: block;
-  border: 1px solid blue;
-  width: 100%;
-  height: 280px;
-  padding: 20px;
-  opacity: 0;
-  transform: translateX(-100px);
-      transition: transform 0.9s cubic-bezier(0.77, 0, 0.175, 1), opacity 0.9s ease-in-out, -webkit-transform 0.9s cubic-bezier(0.77, 0, 0.175, 1);
+    display: block;
+    /* border: 1px solid blue; */
+    width: 100%;
+    height: 280px;
+    /* padding: 20px; */
+    opacity: 0;
+    transform: translateX(-100px);
+    transition: transform 0.9s cubic-bezier(0.77, 0, 0.175, 1), opacity 0.9s ease-in-out, -webkit-transform 0.9s cubic-bezier(0.77, 0, 0.175, 1);
 }
 
 
 .slick-current .item-c {
-  opacity: 1;
+    opacity: 1;
     -webkit-transform: translateX(0px);
     -ms-transform: translateX(0px);
     transform: translateX(0px);
 }
 
+
 button.slick-arrow {
     border: none;
     position: absolute;
-    background-color: rgba(0,0,0, .2);
-    width: 65px;
-    height: 65px;
-  /* border: 1px solid green; */
-  left: 0;
-  z-index: 999;
-  /* top: 120%; */
-  /* top: 0; */
+    border: 1px solid #eaeaea;
+    background-color: white;
+    width: 50%;
+    height: 64px;
+    /* left: 0; */
+    z-index: 999;
+
+    @mixin atSmall {
+            margin-top: 30px;
+
+        width: 64px;
+    }
 }
 
 button.slick-prev {
-    top: -100px;
+    top: 70%;
+    left:0;
 }
 
 button.slick-next {
-    top: -100px;
-    left: 100%;
-    transform: translateX(-65px);
+    top: 70%;
+    right: 0;
+    @mixin atSmall {
+        left: 63px;
+    }
+    /* transform: translateX(-65px); */
 }
