Completed DoubleSlider section

--- a/app/assets/styles/base/_variables.css
+++ b/app/assets/styles/base/_variables.css
@@ -1,6 +1,7 @@
 $primaryCol: #412496;
 $primaryCol-lighter: #8C73FF;
 $primaryCol-point: #9028EF;
+$primaryCol-lightest: #f8f5ff;
 
 $secondaryCol-lighter: #CD94FF;
 
